# nanopb_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  nanopb_cpp.cpp  nanopb_cpp.h
.github/workflows/: ci.yaml  deploy-platformio.yaml
examples/: CMakeLists.txt
examples/complex/: CMakeLists.txt  complex.cpp  complex.options  complex.proto  converters.hpp  main.cpp  models.hpp
test/: CMakeLists.txt
test/cmake/: nanopb_cpp_tests.cmake
test/common/: common_messages.hpp  common_messages.proto  helpers.cpp  helpers.h  inner_message.hpp  simple_enum.hpp  tests_common.h  union_container_no_union.hpp  union_container_no_union.options  union_container_no_union.proto  union_inner_messages.hpp  union_message.hpp  union_message.proto  unit_test.h
test/tests/array/: CMakeLists.txt  array.cpp  array.proto
test/tests/array_double/: CMakeLists.txt  array_double.cpp  array_double.proto
test/tests/array_float/: CMakeLists.txt  array_float.cpp  array_float.proto
test/tests/array_message/: CMakeLists.txt  array_message.cpp  array_message.proto
test/tests/array_signed/: CMakeLists.txt  array_signed.cpp  array_signed.proto
test/tests/array_string/: CMakeLists.txt  array_string.cpp  array_string.proto
test/tests/array_unsigned/: CMakeLists.txt  array_unsigned.cpp
test/tests/bytes/: CMakeLists.txt  bytes.cpp  bytes.proto
test/tests/enum/: CMakeLists.txt  enum.cpp  enum.proto
test/tests/inner_callback/: CMakeLists.txt  inner_callback.cpp  inner_callback.options  inner_callback.proto
test/tests/map/: CMakeLists.txt  map.cpp  map.proto
test/tests/map_string_message/: CMakeLists.txt  map_string_message.cpp  map_string_message.proto
test/tests/map_string_string/: CMakeLists.txt  map_string_string.cpp  map_string_string.proto  test_map_string_string.cpp  test_map_string_string.proto
test/tests/map_uint32_string/: CMakeLists.txt  map_uint32_string.cpp  map_uint32_string.proto  test_map_uint32_string.cpp  test_map_uint32_string.proto
test/tests/repeated_message/: CMakeLists.txt  repeated_message.cpp  repeated_message.proto
test/tests/repeated_signed/: CMakeLists.txt  repeated_signed.cpp  repeated_signed.proto
test/tests/repeated_unsigned/: CMakeLists.txt  repeated_unsigned.cpp  repeated_unsigned.proto
test/tests/scalar/: CMakeLists.txt  scalar.cpp
test/tests/string/: CMakeLists.txt  string.cpp  string.proto  string_common.hpp  string_decode_mem_buffer.cpp  test_string.cpp  test_string.proto
test/tests/union/: CMakeLists.txt  container.hpp  container.options  container.proto  container_no_union.proto  converter.hpp  converter_no_union.hpp  inner_messages.hpp  union.cpp  union.options  union.proto  union_container.hpp  union_container_no_union.hpp  union_container_no_union.proto  union_inner_messages.proto
tests/: CMakeLists.txt  helpers.cpp  helpers.h  messages.proto
tests/test/: test_map_string_string.cpp  test_map_uint32_string.cpp  test_string.cpp
